crates/parser/src/tests/snapshots/parser__tests__input__does_not_mark_compound_tokens_joint_across_trivia.snap
---
source: crates/parser/src/tests/input.rs
description: a- >b
expression: input_tokens(&parser_input)
---
[
    Ident joint,
    Minus,
    Gt joint,
    Ident,
]
