crates/parser/src/tests/snapshots/parser__tests__input__marks_adjacent_compound_tokens_joint.snap
---
source: crates/parser/src/tests/input.rs
description: a->b
expression: input_tokens(&parser_input)
---
[
    Ident joint,
    Minus joint,
    Gt joint,
    Ident,
]
